// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadBlog custom 1`] = `
Array [
  Object {
    "content": "

Hello World
",
    "date": 2018-07-28T00:00:00.000Z,
    "path": "/hello.html",
    "title": "Hello, World !",
  },
  Object {
    "content": "

Lorem ipsum
",
    "date": 2018-06-20T00:00:00.000Z,
    "path": "/foo/bar.html",
    "title": "Lorem ipsum",
  },
  Object {
    "content": "
Life is so good
",
    "date": 2018-05-20T00:00:00.000Z,
    "path": "/foo/baz.html",
    "title": "Baz",
  },
]
`;

exports[`loadBlog simple 1`] = `
Array [
  Object {
    "content": "

Hello World
",
    "date": 2018-07-28T00:00:00.000Z,
    "path": "/hello.html",
    "title": "Hello, World !",
  },
]
`;
